many changes, read description
- installed next js library
- dashboard and socials now pull friends and groups info from a json file so its all the same now
- online text in socials is now green for better visibility

--- a/src/pages/social.css
+++ b/src/pages/social.css
@@ -124,6 +124,9 @@ h1 {
   font-weight: normal; 
   color: rgb(144, 144, 145);
 }
+.online{
+  color: rgb(0, 196, 0);
+}
 
 .switchOption{
   color: white;
