--- a/src/settingsComponents/profile.css
+++ b/src/settingsComponents/profile.css
@@ -1,3 +1,15 @@
+.settingsContainer{
+    width: 100vw;
+    overflow-y: auto;
+    /* Allow the sidebar to scroll */
+    max-height: calc(100vh - 40px);
+    /* Adjust height to fit within the available space */
+    padding-right: 10px;
+    box-sizing: border-box;
+    scrollbar-width: thin; /* Makes the scrollbar thinner */
+    scrollbar-color: #4a4e55 #2A2C32; /* thumb color and track color */
+}
+
 input{
     background-color: #18191d;
     width: 300px;
