--- a/src/pages/social.css
+++ b/src/pages/social.css
@@ -10,13 +10,6 @@ html, body {
 
 .container-friends {
   display: flex;
-  flex-direction: row;
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-}
-
-.friends-menu {
   margin: 20px 20px 20px 80px;
   height: calc(100vh - 40px); /* Subtract the margin space to avoid overflow */
   width: calc(100% - 100px); /* Adjusted dynamically for the sidebar */
@@ -24,19 +17,30 @@ html, body {
   color: white;
   background-color: #2A2C32;
   border-radius: 45px; /* Rounded corners */
-  overflow-y: auto; /* Vertical scrolling inside the dashboard */
+  overflow-y: hidden; /* Vertical scrolling inside the dashboard */
   box-sizing: border-box; /* Include padding in dimensions */
+}
+
+.friends-menu {
+  width: 250px;
+  min-width: 250px;
+  scrollbar-width: thin;
+  scrollbar-color: #4a4e55 #2A2C32;
+  overflow-y: auto;
 }
 
 .filter-container {
   display: flex;
   align-items: center;
+  width: 220px;
   gap: 10px; /* Space between elements */
 }
 
 .filter-group {
   display: flex;
   flex-direction: row;
+  width: 230px;
+  justify-content: center;
 }
 
 .filterOption {
@@ -75,7 +79,7 @@ html, body {
   font-family: inherit;
   font-size: 18px;
   height: 25px;
-  width: 167px;
+  width: 230px;
   transition: width 0.2s ease-in-out;
 }
 
