--- a/src/components/friendsChatbox.css
+++ b/src/components/friendsChatbox.css
@@ -1,9 +1,12 @@
 .chatboxContainer{
     color: white;
     background-color: #2A2C32;
-
+    display: flex;
+    flex-direction: column;
+    height: 100%;   
     width: 100%;
     border-radius: 0 0 20px 20px;
+    overflow: hidden;
 }
 .userHeader{
     margin: 0;
@@ -16,8 +19,69 @@
 .chatboxMain{
     width: 100%;
     height: calc(100% - 85px); 
-    padding: 10px 20px;
     border-radius: 15px 15px 15px 15px;
     border-top: rgb(186, 186, 186) 2px solid;
+    padding: 10px 20px;
     background-color: #3f414a;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+.chatboxMessages {
+    flex: 1;
+    overflow-y: auto;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 5px;
+}
+
+.message {
+    color: white;
+    width: fit-content;
+}
+.messageSender,
+.messageTime{
+    font-size: 0.8rem;
+    color: #b9bbbe;
+}
+
+.chatbox {
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #2c2f33;
+    border-radius: 20px;
+    padding: 10px 15px;
+    height: 50px;
+    width: 100%;
+    min-width: 500px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.chatboxMessage{
+    flex: 1;
+    display: flex;
+    width: 100%;
+}
+.chatboxInput {
+    margin: 0;
+    width: 100%;
+    border: none;
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 20px;
+    outline: none;
+    background: none    ;
+    color: white;
+}
+
+.chatboxInput::placeholder {
+    color: #b9bbbe;
+}
+
+.chatboxButton{
+    font-size: 1.15rem;
+    color: white;
 }
