--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -26,6 +26,7 @@ html, body {
     transition: color 0.3s; /* Smooth color transition */
     position: relative; /* Position for tooltips or any other styling */
     text-decoration: none; /* Ensure text looks clean */
+    
   }
   
   .dashboard-button:active {
@@ -46,17 +47,37 @@ html, body {
   border-radius: 45px; /* Rounded corners */
   overflow-y: auto; /* Vertical scrolling inside the dashboard */
   box-sizing: border-box; /* Include padding in dimensions */
+  scrollbar-width: thin;
+  scrollbar-color: #4a4e55 #2A2C32;
+  scrollbar-gutter: stable;
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    border: 2px solid white;  /* Creates padding effect */
+  }
 }
 
 
-h1 {
+.dashboardHeader {
   font-size: 42px;
-  margin-top: 0;   
-  margin-bottom: 0;
+  margin-bottom: 10px;
+  display: flex;
+}
+.notifications {
+  margin-left: auto;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+  transition: color 0.3s;
 }
 
-.section {
+.dashboard .section {
   margin-bottom: 30px;
+  padding: 25px 30px;
+  background-color: #3f414a;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: auto;
 }
 
 .section h2 {
