--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
 html, body {
-  background-color: #1C1D20;
+  background-color: #ffffff;
   margin: 0;
   font-family: "Lexend", sans-serif;
   height: 100vh;
