--- a/src/components/friendsChatbox.css
+++ b/src/components/friendsChatbox.css
@@ -3,10 +3,10 @@
     background-color: #2A2C32;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     height: 100%;   
     width: 100%;
     border-radius: 0 0 20px 20px;
-    overflow: hidden;
 }
 .userHeader{
     margin: 0;
@@ -31,13 +31,14 @@
     border-top: rgb(186, 186, 186) 2px solid;
     padding: 10px 20px;
     background-color: #3f414a;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
+    position: relative;
+    overflow: hidden;
 }
 .chatboxMessages {
     flex: 1;
-    overflow-y: auto;
+    overflow: auto;
     padding: 15px;
     padding-bottom: 0;
     display: flex;
@@ -45,11 +46,13 @@
     justify-content: flex-end;
     gap: 5px;
     min-height: 0;
+    position: relative;
 }
 
 .message {
     color: white;
     width: fit-content;
+    word-break: break-word;
     margin-top: 0.5rem;
 }
 .messageSender{
