--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -117,8 +117,8 @@ p {
 
 
 .notifications-panel {
-  width: 45%;
-  min-width: 300px;
+  width: 530px;
+  min-width: 530px;
   background-color: #2A2C32;
   border-radius: 25px;
   padding: 20px;
@@ -153,6 +153,7 @@ p {
 }
 
 .notification-item {
+  width: 490px;
   padding: 15px;
   border-radius: 15px;
   background-color: #3f414a;
@@ -182,7 +183,6 @@ p {
   overflow-x: auto;
   gap: 8px;
   margin-bottom: 20px;
-  padding: 0 8px;
   scrollbar-width: thin;
   scrollbar-color: #4a4e55 #2A2C32;
   scrollbar-gutter: stable;
