--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -10,6 +10,7 @@
   z-index: 100;
   overflow: hidden;
   animation: dropdown-fade 0.2s ease;
+  cursor: default; /* Ensure default cursor when hovering over dropdown */
 }
 
 @keyframes dropdown-fade {
@@ -138,12 +139,7 @@
 
 .profile-dropdown-button:hover {
   background-color: #4d4f5b;
-}
-
-.profile-logout:hover {
-  background-color: #924444;
-}
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+}@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
 html, body {
   background-color: #1C1D20;
