chatbox header now shows pfp and status indicator

--- a/src/components/friendsChatbox.css
+++ b/src/components/friendsChatbox.css
@@ -13,6 +13,9 @@
     gap: 10px;
     flex-shrink: 0;
 }
+.userHeader h1{
+    font-size: 40px;
+}
 .userHeader .friend-status{
   margin-left: 10px;
 }
