--- a/src/pages/social.css
+++ b/src/pages/social.css
@@ -37,9 +37,10 @@ html, body {
 
 .filter-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 10px; /* Space between elements */
+  margin-bottom: 10px;
 }
 
 .filter-group {
@@ -190,22 +191,25 @@ h1 {
   font-weight: 500;
 }
 
-.switchOption {
-  color: white;
-  font-size: 22px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 5px;
-  border-radius: 50%;
+.tab-buttons {
   display: flex;
-  align-items: center;
+  gap: 5px;
+  margin-top: 8px;
+  width: 100%;
   justify-content: center;
-  transition: background-color 0.2s;
+  border-bottom: 1px solid #ccc;
 }
 
-.switchOption:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+.tab-button {
+  padding: 6px 12px;
+  border-bottom: 0px solid #ccc;
+  cursor: pointer;
+  width: 50%;
+  transition: border-bottom 0.1s ease-in;
+}
+
+.tab-button.active {
+  border-bottom: 3px solid #fff;
 }
 
 /* Chatbox container styles */
